# WatOr

./: CMakeLists.txt  Doxyfile  creature.cpp  creature.h  main.cpp
docs/html/: annotated.html  classcreature.html  classes.html  creature_8h_source.html  files.html  index.html
docs/html/search/: classes_0.js
docs/latex/: annotated.tex  classcreature.tex  refman.tex
